[project]
name = "openmeteo-api"
version = "0.1.0"
description = "FastAPI service for rain(+7d) and precipitation(3d) predictions"
authors = [{ name = "bhavika" }]
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "pandas==2.1.4",
    "numpy==1.26.4",
    "scikit-learn==1.5.1",
    "joblib==1.4.2",
    "requests==2.32.3",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "openmeteo-api"
version = "0.1.0"
description = "FastAPI service for rain(+7d) and precipitation(3d) predictions"
authors = ["bhavika <bhavika.lalwani02@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "0.30.6"}
pandas = "2.1.4"
numpy = "1.26.4"
scikit-learn = "1.5.1"
joblib = "1.4.2"
requests = "2.32.3"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
