[tool.poetry]
name = "openmeteo-api"
version = "0.1.0"
description = "FastAPI service for rain(+7d) and precipitation(3d) predictions"
authors = ["bhavika <bhavika.lalwani02@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]
requires-python = ">=3.11,<3.12"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
uvicorn = {extras = ["standard"], version = "0.30.6"}
pandas = "2.1.4"
numpy = "1.26.4"
scikit-learn = "1.5.1"
joblib = "1.4.2"
requests = "2.32.3"
ml-25679681 = {git = "https://github.com/BhavikaLalwani/25679681_ml.git"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000